remove twitter link

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 		<p>- A spreadsheet, but it's also a series of database records you can edit.</p>
 		<p>- It lives on your computer, not in the cloud.</p>
 		<hr />
-		We're building it in the open, <a href="https://twitter.com/hyperlocker_db">follow along on twitter</a> if you want : )
+		<!-- We're building it in the open, <a href="https://twitter.com/hyperlocker_db">follow along on twitter</a> if you want : )
 		
 		
-		<hr />
+		<hr /> -->
 
 		<!-- <a href="https://hxgf.io/"><img src="https://hxgf.io/images/hxgf-bug.png" border="0" align="right" style="width: 8rem; margin: 2rem;" /></a> -->
 
